--- a/main.ipynb
+++ b/main.ipynb
@@ -1120,7 +1120,7 @@
     "        <!-- Add navigation or header content here -->\n",
     "    </header>\n",
     "    <p>You can ⌘+F/Ctrl+F and type <code>(desired index)</code> to find a specific index</p>\n",
-    "    <p>Information here</p>\n",
+    "    <p>Information here, Images are ranked on their number of times they appear as a nearest neighbour overall. </p>\n",
     "    <!-- Basic table -->\n",
     "    <table border=\"1\" style=\"width:100%;\">\n",
     "        <thead>\n",
