--- a/main.ipynb
+++ b/main.ipynb
@@ -1113,34 +1113,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.0, 'rgb(0,0,4)'], [0.1111111111111111, 'rgb(27,12,65)'], [0.2222222222222222, 'rgb(74,12,107)'], [0.3333333333333333, 'rgb(120,28,109)'], [0.4444444444444444, 'rgb(165,44,96)'], [0.5555555555555556, 'rgb(207,68,70)'], [0.6666666666666666, 'rgb(237,105,37)'], [0.7777777777777777, 'rgb(251,155,6)'], [0.8888888888888888, 'rgb(247,209,61)'], [1.0, 'rgb(252,255,164)']]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import plotly.colors as pc\n",
-    "\n",
-    "# Get the Inferno colorscale (Plotly provides it in hex format)\n",
-    "inferno_colors = pc.get_colorscale(\"inferno\")\n",
-    "\n",
-    "# Convert Hex to RGB and format it correctly\n",
-    "inferno_rgb_colorscale = [\n",
-    "    [v, f\"rgb({r},{g},{b})\"] for v, (r, g, b) in [(v, pc.hex_to_rgb(c)) for v, c in inferno_colors]\n",
-    "]\n",
-    "\n",
-    "# Print the formatted colorscale\n",
-    "print(inferno_rgb_colorscale)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1713,16 +1685,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Completed export for clip\n",
       "Completed export for vgg19\n",
-      "CPU times: user 5.5 s, sys: 259 ms, total: 5.76 s\n",
-      "Wall time: 5.71 s\n"
+      "Completed export for vgg16\n",
+      "Completed export for hist\n",
+      "CPU times: user 16.6 s, sys: 394 ms, total: 17 s\n",
+      "Wall time: 17.6 s\n"
      ]
     }
    ],
