--- a/main.ipynb
+++ b/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,14 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1001/1001 [00:00<00:00, 3061.70it/s]\n"
+      "100%|██████████| 1001/1001 [00:00<00:00, 2494.36it/s]\n"
      ]
     },
     {
@@ -174,7 +174,7 @@
        "1000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
     "\n",
     "#todo Look into optimising these values\n",
     "dataloader = DataLoader(dataset, batch_size=64,\n",
-    "                        shuffle=False, num_workers=4, prefetch_factor=2)\n",
+    "                        shuffle=False, num_workers=0) #,prefetch_factor=2)\n",
     "\n",
     "# https://pytorch.org/vision/main/models/vgg.html\n",
     "# https://pytorch.org/vision/main/models/generated/torchvision.models.vgg16.html#torchvision.models.VGG16_Weights \n",
@@ -307,14 +307,18 @@
     "# Can investigate here: https://pytorch.org/vision/main/models.html\n",
     "\n",
     "def get_embeddings_pytorch(dataloader, pytorch_model = models.vgg16(weights=models.VGG16_Weights.DEFAULT).to(\"cpu\")):\n",
-    "\n",
     "    pytorch_model.eval()  # optimization (disable unneeded things)\n",
     "    torch.set_grad_enabled(False)  # optimization (disable unneeded things)\n",
     "\n",
     "    batch_embeddings = []  # Using a list to hold embeddings for each image\n",
     "    batch_filenames = []\n",
     "\n",
+    "    total_batches = len(dataloader)\n",
+    "    print(f\"Total batches to process: {total_batches}\")\n",
+    "\n",
     "    for i_batch, (batch, filenames) in enumerate(dataloader):        \n",
+    "        print(f\"Processing batch {i_batch + 1}/{total_batches}...\")  # show progress of batches\n",
+    "\n",
     "        with torch.no_grad():  # Disable gradient calculations for inference\n",
     "            output = pytorch_model(batch)\n",
     "\n",
@@ -324,13 +328,17 @@
     "        # Convert to numpy array\n",
     "        probabilities_numpy = probabilities.detach().cpu().numpy()\n",
     "\n",
-    "        print(f'\\rCompleted batch: {i_batch+1}/{len(dataloader)}', end='', flush=True) # overwrite prev update message\n",
-    "        \n",
     "        # Store each batch's probabilities with corresponding filenames\n",
     "        batch_embeddings.extend(probabilities_numpy)  # Add probabilities for each image\n",
     "        batch_filenames.extend(filenames)  # Add corresponding filenames\n",
     "\n",
-    "    del probabilities, probabilities_numpy # cleaning memory\n",
+    "        # Progress tracking within batch (every 10 batches for example)\n",
+    "        if (i_batch + 1) % 10 == 0:\n",
+    "            print(f\"\\rCompleted {i_batch + 1}/{total_batches} batches\", end='', flush=True)\n",
+    "\n",
+    "    print(\"\\nBatch processing complete.\")  # Final completion message\n",
+    "\n",
+    "    del probabilities, probabilities_numpy  # cleaning memory\n",
     "\n",
     "    return np.array(batch_embeddings), np.array(batch_filenames)"
    ]
@@ -345,15 +353,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 849 µs, sys: 3.2 ms, total: 4.05 ms\n",
-      "Wall time: 10.3 ms\n"
+      "Total batches to process: 16\n",
+      "Processing batch 1/16...\n",
+      "Processing batch 2/16...\n",
+      "Processing batch 3/16...\n",
+      "Processing batch 4/16...\n",
+      "Processing batch 5/16...\n",
+      "Processing batch 6/16...\n",
+      "Processing batch 7/16...\n",
+      "Processing batch 8/16...\n",
+      "Processing batch 9/16...\n",
+      "Processing batch 10/16...\n",
+      "Completed 10/16 batchesProcessing batch 11/16...\n",
+      "Processing batch 12/16...\n",
+      "Processing batch 13/16...\n",
+      "Processing batch 14/16...\n",
+      "Processing batch 15/16...\n",
+      "Processing batch 16/16...\n",
+      "\n",
+      "Batch processing complete.\n",
+      "CPU times: user 6min 57s, sys: 37.7 s, total: 7min 35s\n",
+      "Wall time: 2min 40s\n"
      ]
     }
    ],
@@ -369,8 +396,9 @@
     "# using ThreadPoolEexecutor speed up from 15s to 3s\n",
     "\n",
     "#### Get embedding with batching (for pytorch) ####\n",
-    "# pytorch_model = models.vgg19(weights=models.VGG19_Weights.DEFAULT).to(\"cpu\")\n",
-    "# batch_embeddings, batch_filenames = get_embeddings_pytorch(dataloader, pytorch_model=pytorch_model)\n",
+    "# can also replace 19 with 16\n",
+    "pytorch_model = models.vgg19(weights=models.VGG19_Weights.DEFAULT).to(\"cpu\")\n",
+    "batch_embeddings, batch_filenames = get_embeddings_pytorch(dataloader, pytorch_model=pytorch_model)\n",
     "# np.save(\"./output/image_embedding_vgg19.npy\", batch_embeddings)\n",
     "# np.save(\"./output/image_filenames_vgg19.npy\", batch_filenames)\n",
     "# For VGG16\n",
@@ -386,7 +414,7 @@
     "\n",
     "\n",
     "### Get embedding CLIP ####\n",
-    "# clip_embeddings = get_clip_embedding(image_filenames)\n",
+    "# clip_embeddings = get_clip_embedding(pillow_images)\n",
     "# np.save(\"./output/image_embedding_clip.npy\", clip_embeddings)\n",
     "# np.save(\"./output/image_filenames_clip.npy\", image_filenames) # this is to keep a consistent log of the index\n",
     "\n",
@@ -401,8 +429,8 @@
     "# embedding = np.load(\"./output/image_embedding_vgg19.npy\")\n",
     "# image_filenames = np.load(\"./output/image_filenames_vgg19.npy\")\n",
     "## CLIP ##\n",
-    "embedding = np.load(\"./output/image_embedding_clip.npy\")\n",
-    "image_filenames = np.load(\"./output/image_filenames_clip.npy\")\n"
+    "# embedding = np.load(\"./output/image_embedding_clip.npy\")\n",
+    "# image_filenames = np.load(\"./output/image_filenames_clip.npy\")\n"
    ]
   },
   {
