--- a/main.ipynb
+++ b/main.ipynb
@@ -157,6 +157,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make sure your files have fully uploaded (uploading bar on bottom) before running this cell"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
