--- a/main.ipynb
+++ b/main.ipynb
@@ -152,7 +152,11 @@
    "metadata": {},
    "source": [
     "### 2.2 Batch embedding (pytorch)\n",
-    "While the dataset and function is set up for VGG16, it shouldn't take many changes for this to work for any pytorch embedding model."
+    "The following will describe how to utilise the existing code for pytorch batch embedding. \n",
+    "\n",
+    "This requires a custom dataset class and dataloader (defined below). It is recommended to play with the `DataLoader` parameters to see what runs best. If you use a pytorch embedder other than one of the VGG's (e.g. VGG16/VGG19) you may have to adjust the `ImageDataset` `transform` attribute to resize to an appropriate size with an appropriate mean and std of that embedder.\n",
+    "\n",
+    "The cell defining dataset and dataloader must be run, however the one following it is an example implementation of the `get_embeddings_pytorch` function and may be skipped/commented out. "
    ]
   },
   {
@@ -181,148 +185,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 Save/load embeddings\n",
-    "The intent is to run some function and save your embeddings + filenames, and then at whatever time be able to load those embeddings, saving on time."
+    "This code is commented out by default as 1. It takes a while to run and 2. We will be running it later to produce some of the embeddings.\n",
+    "\n",
+    "Note: to adjust the model you may simply swap vgg16 to another pytorch model, listed here: https://pytorch.org/vision/main/models.html\n",
+    "(Please keep in mind the `ImageDataset` `transform`s may need to be changed if you use a non VGG model, so please refer to the documentation for that model.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pytorch_model = models.vgg16(weights=models.VGG16_Weights.DEFAULT).to(\"cpu\")\n",
+    "# batch_embeddings, image_filenames = get_embeddings_pytorch(dataloader, pytorch_model=pytorch_model)\n",
+    "\n",
+    "# embedding[0:5], image_filenames[0:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Run all embeddings\n",
+    "This cell runs the 4 default embeddings setup for this notebook. You are more than welcome to adjust this. The CLIP embedding is utilising the `imgbeddings` library: https://github.com/minimaxir/imgbeddings\n",
+    "\n",
+    "\n",
+    "The following cell may be commented out after running once."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "#### Get embedding without batching ####\n",
+    "embedding_function = get_normalised_histogram\n",
+    "embedding, image_filenames = get_embedding(image_zip=IMAGE_ZIP, image_extensions=IMAGE_EXTENSIONS, embedding_function=embedding_function) \n",
+    "np.save(\"./output/image_embedding_hist.npy\", embedding)\n",
+    "np.save(\"./output/image_filenames_hist.npy\", image_filenames) # this is to keep a consistent log of the index\n",
+    "using ThreadPoolEexecutor speed up from 15s to 3s\n",
+    "\n",
+    "#### Get embedding with batching (for pytorch) #####\n",
+    "# https://pytorch.org/vision/main/models/vgg.html\n",
+    "# https://pytorch.org/vision/main/models/generated/torchvision.models.vgg16.html#torchvision.models.VGG16_Weights \n",
+    "\n",
+    "# VGG19\n",
+    "pytorch_model = models.vgg19(weights=models.VGG19_Weights.DEFAULT).to(\"cpu\")\n",
+    "batch_embeddings, image_filenames = get_embeddings_pytorch(dataloader, pytorch_model=pytorch_model)\n",
+    "np.save(\"./output/image_embedding_vgg19.npy\", batch_embeddings)\n",
+    "np.save(\"./output/image_filenames_vgg19.npy\", image_filenames)\n",
+    "# VGG16\n",
+    "pytorch_model = models.vgg16(weights=models.VGG16_Weights.DEFAULT).to(\"cpu\")\n",
+    "batch_embeddings, image_filenames = get_embeddings_pytorch(dataloader, pytorch_model=pytorch_model)\n",
+    "np.save(\"./output/image_embedding_vgg16.npy\", batch_embeddings)\n",
+    "np.save(\"./output/image_filenames_vgg16.npy\", image_filenames)\n",
+    "\n",
+    "\n",
+    "### Get embedding CLIP (inbuilt batching) #### \n",
+    "clip_embeddings, image_filenames = get_clip_embedding(IMAGE_ZIP, IMAGE_EXTENSIONS)\n",
+    "np.save(\"./output/image_embedding_clip.npy\", clip_embeddings)\n",
+    "np.save(\"./output/image_filenames_clip.npy\", image_filenames) # this is to keep a consistent log of the index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4 Load selected embeddings\n",
+    "You may comment and uncomment here selectively to load a specific embedding of your choice. This choice will be used when walking through helper functions and visualisations in this notebook.\n",
+    "Please note at the end of this notebook there is an option to either generate an output HTML file for just the embedding selected here, or for any number of them at once. If you opt for the second option and don't wish to see examples, you may skip to the end of the notebook from here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 303.06it/s]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total batches to process: 16\n",
-      "Processing batch 1/16...\n",
-      "Processing batch 2/16...\n",
-      "Processing batch 3/16...\n",
-      "Processing batch 4/16...\n",
-      "Processing batch 5/16...\n",
-      "Processing batch 6/16...\n",
-      "Processing batch 7/16...\n",
-      "Processing batch 8/16...\n",
-      "Processing batch 9/16...\n",
-      "Processing batch 10/16...\n",
-      "Processing batch 11/16...\n",
-      "Processing batch 12/16...\n",
-      "Processing batch 13/16...\n",
-      "Processing batch 14/16...\n",
-      "Processing batch 15/16...\n",
-      "Processing batch 16/16...\n",
-      "\n",
-      "Batch processing complete.\n",
-      "Total batches to process: 16\n",
-      "Processing batch 1/16...\n",
-      "Processing batch 2/16...\n",
-      "Processing batch 3/16...\n",
-      "Processing batch 4/16...\n",
-      "Processing batch 5/16...\n",
-      "Processing batch 6/16...\n",
-      "Processing batch 7/16...\n",
-      "Processing batch 8/16...\n",
-      "Processing batch 9/16...\n",
-      "Processing batch 10/16...\n",
-      "Processing batch 11/16...\n",
-      "Processing batch 12/16...\n",
-      "Processing batch 13/16...\n",
-      "Processing batch 14/16...\n",
-      "Processing batch 15/16...\n",
-      "Processing batch 16/16...\n",
-      "\n",
-      "Batch processing complete.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jasperchong/opt/miniconda3/lib/python3.9/site-packages/huggingface_hub/utils/_deprecation.py:131: FutureWarning: 'cached_download' (from 'huggingface_hub.file_download') is deprecated and will be removed from version '0.26'. Use `hf_hub_download` instead.\n",
-      "  warnings.warn(warning_message, FutureWarning)\n",
-      "/Users/jasperchong/opt/miniconda3/lib/python3.9/site-packages/huggingface_hub/file_download.py:672: FutureWarning: 'cached_download' is the legacy way to download files from the HF hub, please consider upgrading to 'hf_hub_download'\n",
-      "  warnings.warn(\n",
-      "/Users/jasperchong/opt/miniconda3/lib/python3.9/site-packages/transformers/models/clip/processing_clip.py:149: FutureWarning: `feature_extractor` is deprecated and will be removed in v5. Use `image_processor` instead.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55b0cc6a0bdd452ea363895b86ea5901",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 16min 13s, sys: 1min 4s, total: 17min 17s\n",
-      "Wall time: 5min 45s\n"
+      "CPU times: user 1.12 ms, sys: 6.16 ms, total: 7.28 ms\n",
+      "Wall time: 16.6 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "#### Get embedding without batching ####\n",
-    "# embedding_function = get_pytorch_embedding_function()\n",
-    "# embedding_function=get_descriptors_opencv()\n",
-    "# embedding_function = get_normalised_histogram\n",
-    "# embedding, image_filenames = get_embedding(image_zip=IMAGE_ZIP, image_extensions=IMAGE_EXTENSIONS, embedding_function=embedding_function) \n",
-    "# np.save(\"./output/image_embedding_hist.npy\", embedding)\n",
-    "# np.save(\"./output/image_filenames_hist.npy\", image_filenames) # this is to keep a consistent log of the index\n",
-    "# using ThreadPoolEexecutor speed up from 15s to 3s\n",
-    "\n",
-    "#### Get embedding with batching (for pytorch) ####\n",
-    "# https://pytorch.org/vision/main/models/vgg.html\n",
-    "# https://pytorch.org/vision/main/models/generated/torchvision.models.vgg16.html#torchvision.models.VGG16_Weights \n",
-    "\n",
-    "# Can investigate here: https://pytorch.org/vision/main/models.html\n",
-    "## VGG19\n",
-    "# pytorch_model = models.vgg19(weights=models.VGG19_Weights.DEFAULT).to(\"cpu\")\n",
-    "# batch_embeddings, image_filenames = get_embeddings_pytorch(dataloader, pytorch_model=pytorch_model)\n",
-    "# np.save(\"./output/image_embedding_vgg19.npy\", batch_embeddings)\n",
-    "# np.save(\"./output/image_filenames_vgg19.npy\", image_filenames)\n",
-    "## VGG16\n",
-    "# pytorch_model = models.vgg16(weights=models.VGG16_Weights.DEFAULT).to(\"cpu\")\n",
-    "# batch_embeddings, image_filenames = get_embeddings_pytorch(dataloader, pytorch_model=pytorch_model)\n",
-    "# np.save(\"./output/image_embedding_vgg16.npy\", batch_embeddings)\n",
-    "# np.save(\"./output/image_filenames_vgg16.npy\", image_filenames)\n",
-    "# For VGG16\n",
-    "# CPU times: user 5min 35s, sys: 25.6 s, total: 6min\n",
-    "# Wall time: 2min 10s\n",
-    "# For VGG19 (including model download time)\n",
-    "# CPU times: user 8min 37s, sys: 1min, total: 9min 38s\n",
-    "# Wall time: 2min 57s\n",
-    "\n",
-    "# embeddding vgg16 all images \n",
-    "# CPU times: user 3h 48min 31s, sys: 4min 30s, total: 3h 53min 1s\n",
-    "# Wall time: 48min 13s\n",
-    "\n",
-    "\n",
-    "### Get embedding CLIP ####\n",
-    "# clip_embeddings, image_filenames = get_clip_embedding(IMAGE_ZIP, IMAGE_EXTENSIONS)\n",
-    "# np.save(\"./output/image_embedding_clip.npy\", clip_embeddings)\n",
-    "# np.save(\"./output/image_filenames_clip.npy\", image_filenames) # this is to keep a consistent log of the index\n",
-    "\n",
     "#### Load Embeddings ####\n",
     "## Colour Histogram ##\n",
-    "# embedding = np.load(\"./output/image_embedding_hist.npy\")\n",
-    "# image_filenames = np.load(\"./output/image_filenames_hist.npy\")\n",
+    "embedding = np.load(\"./output/image_embedding_hist.npy\")\n",
+    "image_filenames = np.load(\"./output/image_filenames_hist.npy\")\n",
     "## VGG16 ##\n",
     "# embedding = np.load(\"./output/image_embedding_vgg16.npy\")\n",
     "# image_filenames = np.load(\"./output/image_filenames_vgg16.npy\")\n",
@@ -338,20 +294,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Get KNN"
+    "# 3. Embedding Analysis\n",
+    "In this section we will define some functions to help us analyse the image embeddings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Get KNN\n",
+    "In this section we generate the `nearest_neighbours_array` and `neighbours_distance_array` for the desired `number_of_neighbours`. \n",
+    "The `nearest_neighbours_array` is a 2D array where the ith row represents the ith filename in `image_filenames`, and each row lists the desired N nearest neighbours for that specific image.\n",
+    "The `neighbours_distance_array` is similar to the `nearest_neighbours_array`, however lists the neigbour distance.\n",
+    "\n",
+    "Below is an example implementation, you may choose to cache these files, however it shouldn't take too long to run."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 103 ms, sys: 17.1 ms, total: 121 ms\n",
-      "Wall time: 55.1 ms\n"
+      "CPU times: user 99 ms, sys: 34.9 ms, total: 134 ms\n",
+      "Wall time: 88 ms\n"
      ]
     },
     {
@@ -369,7 +338,7 @@
        "       dtype=float32))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,11 +347,10 @@
     "%%time\n",
     "number_of_neighbours = 10\n",
     "nearest_neighbours_array, neighbours_distance_array = get_knn(embedding, number_of_neighbours)\n",
+    "## Save ##\n",
     "# np.save(f\"./output/{number_of_neighbours}_nearest_neighbours.npy\", nearest_neighbours_array)\n",
     "# np.save(f\"./output/{number_of_neighbours}_nearest_neighbours_distance.npy\", neighbours_distance_array)\n",
-    "\n",
-    "\n",
-    "# #* You can read from the saved file by uncommenting this code and commenting above\n",
+    "## Load ##\n",
     "# number_of_neighbours_load = 10\n",
     "# nearest_neighbours_array = np.load(f\"./output/{number_of_neighbours_load}_nearest_neighbours.npy\")\n",
     "# neighbours_distance_array = np.load(f\"./output/{number_of_neighbours_load}_nearest_neighbours_distance.npy\")\n",
@@ -393,22 +361,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Make some analysis helper functions\n",
-    "First some functions for getting the most common neighbours"
+    "### 3.2 Make some analysis helper functions\n",
+    "The first helper function is `get_count_neighbour_occurances`. This function takes the `nearest_neighbour_arary` and returns an array where the ith index is how many times that index appeared as a neighbour (including as a neighbour of itself)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2, 21, 41,  4,  4, 29, 12,  2,  5, 25])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_neighbour_occurance_array = get_count_neighbour_occurances(nearest_neighbours_array=nearest_neighbours_array)\n",
+    "count_neighbour_occurance_array[0:10]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "now some functions for getting the mean distance of an image from its neighbours"
+    "Next up we have `rank_neighbour_occurances`, which takes the previously defined `count_neighbour_occurance_array` as an input, and returns an array where the ith value in the array indicates that the index stored there is the ith most common or ith least common neighbour, depending on if the `ascending` parameter is set to `True` or `False` (`True` by default)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The most common neighbour is at image_filenames index 176\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([499, 531, 517, 508, 502, 115, 487, 549, 461, 447])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ranked_neighbour_occurance_array = rank_neighbour_occurances(count_neighbour_occurance_array, ascending=True)\n",
+    "print(f\"The most common neighbour is at image_filenames index {ranked_neighbour_occurance_array[-1]}\") # The last value as ascending\n",
+    "ranked_neighbour_occurance_array[0:10]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 Getting K-means clusters"
+    "`get_mean_distance` takes in the previously described `neighbours_distance_array` and returns a 1D array where the ith index indicates the ith images mean distance from all of its N nearest neighburs. You may choose whether this calculation should include itself as a neighbour (as each image is always its own closest neighbour) by setting the boolean value of `exclude_self` (`True` by default)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.14259605, 0.06151881, 0.04253466, 0.07726505, 0.07184123,\n",
+       "       0.04206987, 0.07548728, 0.12076729, 0.09519671, 0.04260647],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_mean_distance(neighbours_distance_array, exclude_self=True)[0:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Getting K-means clusters\n",
+    "These will be used as an additional visualisation option for the images.\n",
+    "\n",
+    "The `get_cluster_labels` function takes in `embedding` (the image embedding array) and `n_clusters` (desired number of clusters, by default 10)"
    ]
   },
   {
