--- a/main.ipynb
+++ b/main.ipynb
@@ -11,13 +11,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If you are familiar with jupyter notebooks please start running the notebook from [section 0](#0-import-dependencies), otherwise the following aims to give you a quickstart guide.\n",
+    "\n",
+    "1. Jupter notebooks are made up of 'cells,' these are either 'code' (python in this case ), or 'text' (markdown) cells.\n",
+    "2. To run a cell you can either click on the run symbol in a cell, or use `shift`+`enter`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 0. Import Dependencies\n",
     "This notebook includes many functions in different files, feel free to explore them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +555,7 @@
    "source": [
     "# 5. Data exploration\n",
     "This following section aims to serve as an example of some visualisation options. Feel free to add your own here. \n",
-    "\n",
+    "Please note this section depends on the running of sections 2 and 3.\n",
     "\n",
     "First, lets graph the most common neighbours"
    ]
@@ -810,88 +820,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "look at observations and think about what sort of things to look at to find interesting features. draw attention to 'arms' etc."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Observations\n",
-    "The following is some observations I have noted using a 1000 image subset of the bneeats image dataset.\n",
+    "## Exploration advice - some things to look for \n",
+    "The following is a list of some general things that tend to be interesting within this notebooks visualisations.\n",
+    "I would recommend investigating the following:\n",
     "\n",
-    "- You can change the amount of clusters for different advantages \n",
+    "\n",
+    "1. The distribution of the nearest neighbour count histogram\n",
+    "    - Some embeddings tend to be much more skewed than others\n",
+    "\n",
+    "2. Mean distance histogram \n",
+    "    - Some distributions appear more normal than others.\n",
+    "\n",
+    "3. The difference in embedding between the most and least neighbour occurance images.\n",
+    "    - Is one more even than the other? etc.\n",
+    "\n",
+    "4. The general theme of clusters (from setting `group_clusters` to not `False`)\n",
+    "    - Some clusters have very explicit themes \n",
+    "\n",
+    "5. The 'arms' and 'clusters' in the force directed diagram\n",
+    "    - Using the selection tool in the notebook to see if there are themes to arms and clusters\n",
+    "    - Compare how these themes differ to the cluster themes \n",
+    "    - What sort of images appear in the main hotspots?\n",
+    "\n",
+    "6. You can change the amount of neighbours for different advantages in the force directed diagram.\n",
     "    - Lower neighbours will create more branches, as it isolates small \"groups\"\n",
-    "    - Higher neighbours will be more central, but accentuate the very different groups \n",
-    "\n",
-    "- interestingly across the board the clusters don’t seem to be significant predictors of location on the force directed diagram, they appear to largely capture different things. This may be due to a lack of clusters.\n",
-    "- Overall, VGG16 and CLIP tend place pizza, burgers, “documents” (like menus, text ads), and furniture by themselves on their own 'branches'.\n",
-    "\n",
-    "histogram:\n",
-    "- the mean distance histogram appears constantly decreasing \n",
-    "- images with a similar amount of all types of pixels appear to have more neighbours than ones that are colour dominated\n",
-    "- the force directed diagram is centralised with two branches, the lower branch seems to be images that are white dominated, and the upper branch has a cluster of images with black backgrounds and yellow text!\n",
-    "- there is a more minor branch going down that has images with black backgrounds and white text, and navy backgrounds with white text\n",
-    "- the nearest neighbour count histogram is fairly uneven\n",
-    "- Some clusters are very explicit:\n",
-    "    - 9: pastel pink dominated\n",
-    "    - 8: Black and blue dominated\n",
-    "    - 6: very white dominated\n",
-    "    - 5: navy dominated\n",
-    "    - 4: \"lime green\" dominated \n",
-    "    - 3: pure black and white\n",
-    "    - 2: primarily black and yellow\n",
-    "    - 1: Images with lots of white but a good mix of other colours\n",
-    "\n",
-    "VGG16:\n",
-    "- images with a more uniform probability distribution tend to appear more as a nearest neighbour, meaning things that vgg16 classifies as 'definitely one thing' tend to appear less as neighbours\n",
-    "\n",
-    "- much more uneven 10 smallest mean distance\n",
-    "- extremely uneven nearest neighbour count histogram\n",
-    "- fairly normal mean distance histogram with a spike in the smallest bin\n",
-    "\n",
-    "- “Spider-like” force directed diagram (lots of legs branching from a central hub)\n",
-    "    - one arm (prominent bottom left) consists of people holding cups\n",
-    "    - arm (bottom right) largely of rectangles with writing (e.g. informative images, menus, etc.)\n",
-    "    - arm (vertical up) largely top down view of dishes with a central brown-dominated food\n",
-    "    - arm (top right) food centred on a proportionately quite large white plate\n",
-    "    - arm (centre right) ice cream/dessert looking foods\n",
-    "    - arm (top left) “hot pot” looking foods in black bowls/cooking pots\n",
-    "\n",
-    "- Cluster features:\n",
-    "    - 0: white furniture\n",
-    "    - 1: mostly white rectangles with text (not photos but computer graphics)\n",
-    "    - 5: burgers\n",
-    "    - 7: pizza\n",
-    "    - 8: food in black bowls\n",
-    "    - 9: hot dog-ish foods\n",
-    "\n",
-    "\n",
-    "CLIP:\n",
-    "- it seems that images with “more things going on” seem to have more neighbours, this may have something to do with the patches that CLIP creates\n",
-    "- Very even 10 smallest mean distance graph\n",
-    "- Unbalanced nearest neighbour count graph\n",
-    "- “Normal” looking mean neighbour distance graph\n",
-    "\n",
-    "- looking at the embedding graph, the highest and lowest neighbours appear to have 3 major spikes in the same places, and look quite similar. (this tracks with the even mean distance graph)\n",
-    "- force directed diagram is quite central with 4 large spikes\n",
-    "    - bottom left: pizza\n",
-    "    - bottom central: burgers\n",
-    "    - central right: “sheets with text” computer graphics\n",
-    "    - upper right: white/gray furniture photos\n",
-    "\n",
-    "- Cluster features\n",
-    "    - 0: Tables, chairs, and drawers/dressers\n",
-    "    - 1: “flat” images with text (like things made in canva)\n",
-    "    - 3: Desserts/pastries\n",
-    "    - 5: Often things with two dishes (two plates, a plate and a cup) etc.\n",
-    "    - 6: every photo has a person or dog (or something that could be mistaked for the above)\n",
-    "    - 7: Burgers\n",
-    "    - 8: People holding things (or photos with one \"thing\" in them)\n",
-    "    - 9: Mostly Coffee (and a couple other drinks)\n",
-    "\n",
-    "- Note: CLIP Very strongly put photos with a person or dog in one cluster (and had a different cluster for people holding things). It seems like CLIP has been trained on a lot more photos of people than VGG16. Clip is also much “better” at putting things together, VGG16 in the burger cluster had a lot more things that looked like burgers but weren’t burgers.\n",
-    "- the CLIP clusters tended to be much more differentiable to the eye than the VGG16 ones, it. It has clearly been trained on things like burgers, humans, dogs, hands, and coffee"
+    "    - Higher neighbours will be more central, but accentuate the very different groups "
    ]
   }
  ],
