added time estimations

--- a/main.ipynb
+++ b/main.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,16 +86,18 @@
    "outputs": [],
    "source": [
     "input_files = os.listdir('./input')\n",
-    "if len(input_files) == 1:\n",
-    "    if not input_files[0].endswith('.zip'):\n",
-    "        print(\"Single file in input folder is not a .zip file\")\n",
+    "if len(input_files) == 2:\n",
+    "    if not (input_files[0].endswith('.zip') or input_files[1].endswith('.zip')):\n",
+    "        print(\"Single file in input folder (excluding .gitkeep) is not a .zip file\")\n",
     "\n",
     "    else:\n",
-    "        # therefore there is one zip file \n",
-    "        IMAGE_ZIP = \"./input/\" + input_files[0]\n",
-    "        print(f\"Successfully found file '{input_files[0]}'.\")\n",
+    "        for file in input_files:\n",
+    "            if file.endswith('.zip'):\n",
+    "                # therefore there is one zip file \n",
+    "                IMAGE_ZIP = \"./input/\" + input_files[0]\n",
+    "                print(f\"Successfully found file '{input_files[0]}'.\")\n",
     "else:\n",
-    "    print(\"One file not found in the input folder\")"
+    "    print(\"One file not found in the input folder (excluding .gitkeep)\")"
    ]
   },
   {
@@ -113,7 +115,12 @@
    "source": [
     "# adjust these to desired values (Zip file images will be read from)\n",
     "IMAGE_EXTENSIONS = (\".jpg\", \".JPG\", \".png\",\".PNG\", \".JPEG\", \".jpeg\") # The filename suffixes to be included\n",
-    "IMAGE_IGNORE = (\"._\", ) # filename prefixes to be excluded \"._\" is for metadata"
+    "IMAGE_IGNORE = (\"._\", ) # filename prefixes to be excluded \"._\" is for metadata\n",
+    "\n",
+    "# Display how many images are detected in the zip file.\n",
+    "imgzip = zipfile.ZipFile(IMAGE_ZIP)\n",
+    "print(f\"{len([name for name in imgzip.namelist() if name.endswith(IMAGE_EXTENSIONS) and not name.split('/')[-1].startswith(IMAGE_IGNORE)])} images detected.\")\n",
+    "del imgzip"
    ]
   },
   {
@@ -131,7 +138,7 @@
    "source": [
     "imgzip = zipfile.ZipFile(IMAGE_ZIP)\n",
     "for name in imgzip.namelist():\n",
-    "    if name.endswith(IMAGE_EXTENSIONS) and not name.startswith(IMAGE_IGNORE):\n",
+    "    if name.endswith(IMAGE_EXTENSIONS) and not name.split(\"/\")[-1].startswith(IMAGE_IGNORE):\n",
     "        with Image.open(imgzip.open(name)) as img:\n",
     "            print(name)\n",
     "            display(img)\n",
@@ -171,6 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This should take about 15 seconds to run for 1000 images\n",
     "skip = False\n",
     "if not skip:\n",
     "    embedding_function = get_normalised_histogram\n",
@@ -232,6 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This should take about 13 minutes to run for 1000 images\n",
     "skip = True\n",
     "if not skip:\n",
     "    pytorch_model = models.vgg16(weights=models.VGG16_Weights.DEFAULT).to(\"cpu\")\n",
@@ -259,6 +268,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "# This should take about 15 seconds to run for 1000 images\n",
     "#### Get embedding without batching ####\n",
     "embedding_function = get_normalised_histogram\n",
     "embedding, image_filenames = get_embedding(image_zip=IMAGE_ZIP, image_extensions=IMAGE_EXTENSIONS, image_ignore=IMAGE_IGNORE, embedding_function=embedding_function) \n",
@@ -273,6 +283,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "# This should take about 13 minutes to run for 1000 images\n",
     "#### Get embedding with batching (for pytorch) #####\n",
     "# https://pytorch.org/vision/main/models/vgg.html\n",
     "# https://pytorch.org/vision/main/models/generated/torchvision.models.vgg16.html#torchvision.models.VGG16_Weights \n",
@@ -291,6 +302,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "# This should take about 12 minutes to run for 1000 images\n",
     "#### Get embedding with batching (for pytorch) #####\n",
     "# https://pytorch.org/vision/main/models/vgg.html\n",
     "# https://pytorch.org/vision/main/models/generated/torchvision.models.vgg16.html#torchvision.models.VGG16_Weights \n",
@@ -309,6 +321,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "# This should take about 6 minutes to run for 1000 images\n",
     "### Get embedding CLIP (inbuilt batching) #### \n",
     "clip_embeddings, image_filenames = get_clip_embedding(IMAGE_ZIP, IMAGE_EXTENSIONS, image_ignore=IMAGE_IGNORE, batch_size=32)\n",
     "np.save(\"./output/image_embedding_clip.npy\", clip_embeddings)\n",
@@ -380,6 +393,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "# This should take about 30 seconds to run for 1000 images\n",
     "number_of_neighbours = 10\n",
     "nearest_neighbours_array, neighbours_distance_array = get_knn(embedding, number_of_neighbours)\n",
     "\n",
@@ -506,7 +520,8 @@
     "%%time\n",
     "\n",
     "generate_all = True\n",
-    "\n",
+    "# generate_all = True: Should take about 4 minutes to run for 1000 images and 4 embeddings.\n",
+    "# generate_all = False: Should take about 1 minute to run for 1000 images and 1 embedding.\n",
     "## Settings for both options ##\n",
     "group_clusters=True\n",
     "colour_map=\"tab20\"\n",
