--- a/main.ipynb
+++ b/main.ipynb
@@ -31,10 +31,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# General\n",
+    "import numpy as np\n",
+    "\n",
+    "# Image processing\n",
     "from PIL import Image\n",
     "import os \n",
-    "\n",
-    "import numpy as np\n",
     "import zipfile\n",
     "\n",
     "### Embedding options ###\n",
@@ -49,19 +51,16 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "# Set random seeds\n",
     "import random\n",
-    "\n",
     "random.seed(42) \n",
     "np.random.seed(42)\n",
     "torch.manual_seed(42)\n",
     "\n",
-    "\n",
+    "# Custom functions\n",
     "from get_embeddings import get_clip_embedding, get_normalised_histogram, get_embedding, get_embeddings_pytorch\n",
-    "\n",
     "from embeddings_analysis import get_knn, get_count_neighbour_occurances, rank_neighbour_occurances, get_mean_distance, get_cluster_labels\n",
-    "\n",
     "from force_directed_diagram import get_diagram_data #, get_position_df\n",
-    "\n",
     "from get_html import get_html_rendering_details, generate_html"
    ]
   },
