--- a/main.ipynb
+++ b/main.ipynb
@@ -22,7 +22,9 @@
    "metadata": {},
    "source": [
     "# 0. Import Dependencies\n",
-    "This notebook includes many functions in different files, feel free to explore them."
+    "This notebook includes many functions in different files, feel free to explore them.\n",
+    "\n",
+    "First run the following cell (`shift`+`enter`) to import the required libraries/functions."
    ]
   },
   {
@@ -75,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please upload a single `.zip` file into the `input` folder [here](./input), and then run the following cell."
+    "Please upload a single `.zip` file into the `input` folder [here](./input), and then run the following cell to attempt to locate the image zip file."
    ]
   },
   {
@@ -103,7 +105,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may edit `IMAGE_EXTENSIONS` if you wish to exclude/include particular filename suffixes. You may also edit `IMAGE_IGNORE` to exclude certain filename prefixes (e.g. `._` is a metadata filename prefix)."
+    "Please run this cell to setup image parsing preferences, and to test image detections.\n",
+    "\n",
+    " You may edit `IMAGE_EXTENSIONS` if you wish to exclude/include particular filename suffixes. You may also edit `IMAGE_IGNORE` to exclude certain filename prefixes (e.g. `._` is a metadata filename prefix)."
    ]
   },
   {
@@ -126,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example code for displaying an image from the zip file. The following code displays the first image in the zip file."
+    "The following cell is example code for displaying the first image in the zip file. Please run it to see your image and its filename appear below."
    ]
   },
   {
@@ -150,7 +154,7 @@
    "metadata": {},
    "source": [
     "# 2. Embed images\n",
-    "In this section we go over methods to convert our images into a 1D array of numbers (or an N-dimensional vector).\n",
+    "In this section we go over methods to convert our images into a 1D array of numbers (or an N-dimensional vector). There are many ways that this is done, and this notebook aims to allow for explicit comparisons between how differend embedding methods \"see\" images.\n",
     "\n",
     "The following are simply examples, and you are more than welcome to adjust the existing code to fit your needs, or to import your own embeddings. The format is a 2D array, where each row is a different image (with the ith row in `embedding` corresponding to the ith filename in `image_filenames`).\n",
     "\n",
@@ -470,13 +474,6 @@
     "%%time\n",
     "cluster_labels = get_cluster_labels(embedding, n_clusters=20)\n",
     "cluster_labels[0:10]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "HTML GENERATION"
    ]
   },
   {
