--- a/main.ipynb
+++ b/main.ipynb
@@ -519,7 +519,7 @@
     "# generate_all = True: Should take about 4 minutes to run for 1000 images and 4 embeddings.\n",
     "# generate_all = False: Should take about 1 minute to run for 1000 images and 1 embedding.\n",
     "## Settings for both options ##\n",
-    "group_clusters=True\n",
+    "group_clusters='rank'\n",
     "colour_map=\"tab20\"\n",
     "\n",
     "## generate_all=True specific options ## \n",
