--- a/main.ipynb
+++ b/main.ipynb
@@ -349,7 +349,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3.2 Generate VGG19 Embeddings\n",
+    "#### 2.3.2 Define Dataloader for VGG embeddings\n",
+    "\n",
+    "This is required for both VGG embeddings (if you don't plan on running either VGG embedding you are welcome to skip), you are welcome to alter the `DataLoader` parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import custom tensor dataset from other file\n",
+    "dataset = ImageDataset(image_zip=IMAGE_ZIP, image_extensions=IMAGE_EXTENSIONS, image_ignore=IMAGE_IGNORE,\n",
+    "                    transform= transforms.Compose([\n",
+    "                        transforms.Resize((224, 224)),  # Resize image to 224x224 pixels\n",
+    "                        transforms.ToTensor(),         # Convert image to tensor\n",
+    "                        transforms.Normalize(          # Normalize using ImageNet statistics\n",
+    "                            mean=[0.485, 0.456, 0.406],  # Mean for RGB channels\n",
+    "                            std=[0.229, 0.224, 0.225]    # Standard deviation for RGB channels\n",
+    "                                )\n",
+    "    ]))\n",
+    "\n",
+    "# can look into optimising these values\n",
+    "dataloader = DataLoader(dataset, batch_size=64,\n",
+    "                        shuffle=False, num_workers=0) #,prefetch_factor=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.3.3 Generate VGG19 Embeddings\n",
     "This should take about 13 minutes to run for 1000 images"
    ]
   },
@@ -387,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3.3 Generate VGG16 Embeddings\n",
+    "#### 2.3.4 Generate VGG16 Embeddings\n",
     "This should take about 12 minutes to run for 1000 images"
    ]
   },
@@ -425,7 +456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3.4 Generate CLIP Embeddings\n",
+    "#### 2.3.5 Generate CLIP Embeddings\n",
     "This should take about 6 minutes to run for 1000 images"
    ]
   },
@@ -459,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. HTML Export \n",
+    "# 3. HTML Export \n",
     "Create a \"summary\" HTML document. What this document contains is better described within the file. If running in binderhub, please right click + `Open in New Browser Tab` the html file to ensure the javascript runs as expected. \n",
     "\n",
     "The main options are the following: `colour_map` (the variable that describes how different clusters are coloured) is set to `\"tab20\"` by default but it may be set to any of the options avaliable when running `from matplotlib import colormaps` and `list(colormaps)` (for over 20 clusters you would need to use a continous map like `\"viridis\"`).\n",
@@ -480,19 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following cell you can change the boolean value of `generate_all` to select one of the following:\n",
-    "- `True`: generate a html file for each embedding in `embedding_name_list`.Note that the name in `embedding_name_list` refers to the name used when saving the embedding + image_filenames. This can be run immediately after saving the embeddings, and does not require any of the cells inbetween. \n",
-    "\n",
-    "- `False`: generate a single html file using the values from sections 2 and 3. This means it will use the embedding type you chose to load, the number of clusters or nearest neighbours you selected etc. This option requires running the cells up to this point. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[filename[16:-4] for filename in os.listdir(\"./output\") if filename.startswith(\"image_embedding_\") and filename.endswith(\".npy\")]"
+    "The following will generate a html file for each saved embedding found in `/output`. "
    ]
   },
   {
@@ -503,7 +522,6 @@
    "source": [
     "%%time\n",
     "# Should take about 4 minutes to run for 1000 images and 4 embeddings.\n",
-    "\n",
     "\n",
     "## Settings ##\n",
     "group_clusters='rank'\n",
@@ -539,10 +557,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4 Load selected embeddings\n",
-    "You may change the value of `embedding_to_load` to load a specific embedding of your choice. This choice will be used when walking through helper functions and visualisations in this notebook.\n",
+    "# 4. Embedding Analysis\n",
+    "In this section we will define some functions to help us analyse the image embeddings. The custom functions described in this section can be found in [embeddings_analysis.py](./embeddings_analysis.py)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1 Load selected embeddings\n",
+    "First we will load a single embedding to explore for the remainder of the notebook. This can be changed at any time, and you can rerun the remainder of the notebook to see everything for that new embedding.\n",
     "\n",
-    "Please note in section 4 of this notebook there is an option to either generate an output HTML file for just the embedding selected here, or for any number of them at once. If you opt for the second option and don't wish to see examples, you may [skip to generating html](#4-html-export) from here."
+    "You may change the value of `embedding_to_load` to load a specific embedding of your choice. This choice will be used when walking through helper functions and visualisations in this notebook."
    ]
   },
   {
@@ -577,15 +603,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Embedding Analysis\n",
-    "In this section we will define some functions to help us analyse the image embeddings. The custom functions described in this section can be found in [embeddings_analysis.py](./embeddings_analysis.py)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.1 Get KNN\n",
+    "### 4.2 Get KNN\n",
     "In this section we generate the `nearest_neighbours_array` and `neighbours_distance_array` for the desired `number_of_neighbours`. \n",
     "The `nearest_neighbours_array` is a 2D array where the ith row represents the ith filename in `image_filenames`, and each row lists the desired N nearest neighbours for that specific image.\n",
     "The `neighbours_distance_array` is similar to the `nearest_neighbours_array`, however lists the neigbour distance.\n",
@@ -611,7 +629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 Make some analysis helper functions\n",
+    "### 4.3 Make some analysis helper functions\n",
     "The first helper function is `get_count_neighbour_occurances`. This function takes the `nearest_neighbour_arary` and returns an array where the ith index is how many times that index appeared as a neighbour (including as a neighbour of itself)."
    ]
   },
@@ -663,7 +681,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 Getting K-means clusters\n",
+    "### 4.4 Getting K-means clusters\n",
     "These will be used as an additional visualisation option for the images.\n",
     "\n",
     "The `get_cluster_labels` function takes in `embedding` (the image embedding array) and `n_clusters` (desired number of clusters, by default 10). If you wish you may also change the `random_state`. This function returns a 1D array, where the ith index indicates what cluster the ith image lies in. (e.g. 0th cluster, 1st cluster...)"
@@ -686,7 +704,6 @@
    "source": [
     "# 5. Data exploration\n",
     "This following section aims to serve as an example of some visualisation options. Feel free to add your own here. \n",
-    "Please note this section depends on the running of sections 2 and 3.\n",
     "\n",
     "First, lets graph the most common neighbours"
    ]
