--- a/main.ipynb
+++ b/main.ipynb
@@ -516,9 +516,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completed export for vgg16\n",
+      "Completed export for hist\n",
+      "Completed export for clip\n",
+      "Completed export for vgg19\n",
+      "CPU times: user 5.4 s, sys: 566 ms, total: 5.97 s\n",
+      "Wall time: 7.73 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# Should take about 4 minutes to run for 1000 images and 4 embeddings.\n",
