--- a/main.ipynb
+++ b/main.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you are familiar with jupyter notebooks please start running the notebook from [section 0](#0-import-dependencies), otherwise the following aims to give you a quickstart guide.\n",
+    "If you are familiar with jupyter notebooks please start running the notebook from [section 0](#zero), otherwise the following aims to give you a quickstart guide.\n",
     "\n",
     "1. Jupter notebooks are made up of 'cells,' these are either 'code' (python in this case ), or 'text' (markdown) cells.\n",
     "2. To run a cell you can either click on the run symbol in a cell, or use `shift`+`enter`.\n",
@@ -64,6 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"zero\"></a>\n",
     "# 0. Import Dependencies\n",
     "\n",
     "This notebook includes many functions in different files, feel free to explore them.\n",
@@ -121,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please upload a single `.zip` file into the `input` folder [here](./input), and then run the following cell to attempt to locate the image zip file.\n",
+    "Please upload a single `.zip` file into the `/input` folder, and then run the following cell to attempt to locate the image zip file.\n",
     "\n",
     "If you want to upload a new file, you will need to replace your existing uploaded file, or delete it."
    ]
@@ -206,7 +207,7 @@
     "\n",
     "The following are simply examples, and you are more than welcome to adjust the existing code to fit your needs, or to import your own embeddings. The format is a 2D array, where each row is a different image (with the ith row in `embedding` corresponding to the ith filename in `image_filenames`).\n",
     "\n",
-    "The purpose of sections 2.1 and 2.2 are to describe how the existing functions work for someone who wishes to modify the code. For those who don't wish to do this they may skip to section [2.3](#23-run-all-embeddings).\n",
+    "The purpose of sections 2.1 and 2.2 are to describe how the existing functions work for someone who wishes to modify the code. For those who don't wish to do this they may skip to section [2.3](#23).\n",
     "\n",
     "The custom functions described in this section can be found in [get_embeddings.py](./get_embeddings.py)."
    ]
@@ -300,6 +301,7 @@
    "metadata": {},
    "source": [
     "### 2.3 Run all embeddings\n",
+    "<a id=\"23\"></a>\n",
     "<!-- This cell runs the 4 default embeddings setup for this notebook. You are more than welcome to adjust this. The CLIP embedding is utilising the `imgbeddings` library: https://github.com/minimaxir/imgbeddings -->\n",
     "\n",
     "Run the cells you wish to generate embeddings for, this may be all of them, or only some.\n",
@@ -491,6 +493,7 @@
    "metadata": {},
    "source": [
     "# 3. HTML Export \n",
+    "<a id=\"3\"></a>\n",
     "Create a \"summary\" HTML document. What this document contains is better described within the file. If running in binderhub, please right click + `Open in New Browser Tab` the html file to ensure the javascript runs as expected. \n",
     "\n",
     "The main options are the following: `colour_map` (the variable that describes how different clusters are coloured) is set to `\"tab20\"` by default but it may be set to any of the options avaliable when running `from matplotlib import colormaps` and `list(colormaps)` (for over 20 clusters you would need to use a continous map like `\"viridis\"`).\n",
@@ -550,7 +553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that you have generated the html output files, they can be found in [./output](./output). If running in binderhub, please right click + `Open in New Browser Tab` the html file to ensure the javascript runs as expected. Or you may download them."
+    "Now that you have generated the html output files, they can be found in `/output`. If running in binderhub, please right click + `Open in New Browser Tab` the html file to ensure the javascript runs as expected. Or you may download them."
    ]
   },
   {
@@ -919,7 +922,7 @@
     "### 5.6 Force directed diagram code\n",
     "This section was originally to create an interactive \"network plot\" with a heatmap for aid in visualisation, using different colours for each points cluster. \n",
     "\n",
-    "The code for viewing these plots can be seen commented out in [force_directed_diagram.py](./force_directed_diagram.py), however the same visualisation are avaliable in the output html documents [created in section 4](#4-html-export) (**this is the recommended way to view these graphs**).\n",
+    "The code for viewing these plots can be seen commented out in [force_directed_diagram.py](./force_directed_diagram.py), however the same visualisation are avaliable in the output html documents [created in section 3](#3) (**this is the recommended way to view these graphs**).\n",
     "\n",
     "The example code shown in this section is use to create the diagrams for the output html file. "
    ]
