--- a/main.ipynb
+++ b/main.ipynb
@@ -13,15 +13,15 @@
    "source": [
     "This notebook builds a standalone visualisation of a set of images you upload in a zip file. It is inspired by the Image Machine [1]\n",
     "\n",
-    "It will apply off-the-shelf algorithms for representing your images as a compact set of a numbers [(an embedding of the images in a vector space)](TODO: link to a wikipedia page). The resulting representation of the images is used to organise and visualise the relationships between the images you upload, *with respect to* the specific embedding algorithm chosen.  \n",
+    "It will apply off-the-shelf algorithms for representing your images as a compact set of a numbers [(an embedding of the images in a vector space)](https://en.wikipedia.org/wiki/Embedding). The resulting representation of the images is used to organise and visualise the relationships between the images you upload, *with respect to* the specific embedding algorithm chosen.  \n",
     "\n",
     "## Supported \"Embeddings\"\n",
     "\n",
     "This notebook supports generating the following embeddings for your uploaded images:\n",
     "\n",
-    "- Colour Histogram: A size-normalised RGB pixel colour count array [[1]](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.histogram).\n",
-    "- VGG (16 and 19): A convolutional neural network that returns probabilities for images being in each of the 1000 categories [[2]](https://pytorch.org/vision/main/models/vgg.html).\n",
-    "- CLIP: OpenAi's model trainied on image-text pairs. [[3]](https://github.com/minimaxir/imgbeddings)\n",
+    "- Colour Histogram: A size-normalised RGB pixel colour count array [2].\n",
+    "- VGG (16 and 19): A convolutional neural network that returns probabilities for images being in each of the 1000 categories [3].\n",
+    "- CLIP: OpenAi's model trainied on image-text pairs [4].\n",
     "\n",
     "## What You'll Need\n",
     "\n",
@@ -41,11 +41,9 @@
     "\n",
     "Try out these example datasets:\n",
     "\n",
+    "- wildlife/landscape image dataset (labelled `jasperchong_image_dataset.zip` within directory).\n",
     "- ***add links from zenodo + brief description***\n",
-    "- ultrasounds images\n",
-    "\n",
-    "\n",
-    "\n"
+    "- [ultrasounds images](http://cimalab.unal.edu.co/?lang=en&mod=program&id=5).\n"
    ]
   },
   {
@@ -87,7 +85,7 @@
     "import zipfile\n",
     "\n",
     "### Embedding options ###\n",
-    "## VGG16 ##\n",
+    "## VGG ##\n",
     "from torch.utils.data import DataLoader\n",
     "from dataset import ImageDataset\n",
     "from torchvision import transforms\n",
@@ -300,8 +298,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 Run all embeddings\n",
     "<a id=\"23\"></a>\n",
+    "### 2.3 Run all embeddings\n",
     "<!-- This cell runs the 4 default embeddings setup for this notebook. You are more than welcome to adjust this. The CLIP embedding is utilising the `imgbeddings` library: https://github.com/minimaxir/imgbeddings -->\n",
     "\n",
     "Run the cells you wish to generate embeddings for, this may be all of them, or only some.\n",
@@ -492,8 +490,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. HTML Export \n",
     "<a id=\"3\"></a>\n",
+    "# 3. HTML Export \n",
     "Create a \"summary\" HTML document. What this document contains is better described within the file. If running in binderhub, please right click + `Open in New Browser Tab` the html file to ensure the javascript runs as expected. \n",
     "\n",
     "The main options are the following: `colour_map` (the variable that describes how different clusters are coloured) is set to `\"tab20\"` by default but it may be set to any of the options avaliable when running `from matplotlib import colormaps` and `list(colormaps)` (for over 20 clusters you would need to use a continous map like `\"viridis\"`).\n",
@@ -607,9 +605,11 @@
    "metadata": {},
    "source": [
     "### 4.2 Get KNN\n",
-    "In this section we generate the `nearest_neighbours_array` and `neighbours_distance_array` for the desired `number_of_neighbours`. \n",
+    "In this section we generate the `nearest_neighbours_array` and `neighbours_distance_array` for the desired `number_of_neighbours` using the pynndescent library [5]. \n",
     "The `nearest_neighbours_array` is a 2D array where the ith row represents the ith filename in `image_filenames`, and each row lists the desired N nearest neighbours for that specific image.\n",
     "The `neighbours_distance_array` is similar to the `nearest_neighbours_array`, however lists the neigbour distance.\n",
+    "\n",
+    "\n",
     "\n",
     "Below is an example implementation, it shouldn't take long to run."
    ]
